<resources>
    <string name="app_name">Zeke Market News</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="latest_news_error">Unable to receive latest news</string>
    <string name="retry_text">Retry</string>
    <string name="search_hint">Search News</string>
    <string name="no_bookmarks_text">No Bookmarks</string>
    <string name="clear_bookmarks">Clear Bookmarks</string>
    <string name="dialog_title">Confirm clear bookmarks</string>
    <string name="dialog_message">Do you really want to clear all bookmarks?</string>
    <string name="negative_button_text">Cancel</string>
    <string name="positive_button_text">Yes</string>
    <string name="read_article_text">Read full article</string>
    <string name="source_text">Source: %1$s</string>
    <string name="ticker_current_price">$%1$s</string>
    <string name="positive_value">+%1$s</string>
    <string name="open_entry_text">Open: %1$s</string>
    <string name="high_entry_text">High: %1$s</string>
    <string name="low_entry_text">Low: %1$s</string>
    <string name="close_entry_text">Close: %1$s</string>
    <string name="volume_entry_text">Volume: %1$s</string>
    <string name="non_us_ticker_error">Unable to view this ticker at this time
        \nTry tickers from the United States</string>
    <string name="us_ticker_error">Unable to get current price at this time</string>
    <string name="chart_loading_text">Loading…</string>
    <string name="chart_error_text">Unable to display chart</string>
    <string name="one_day_timeframe_text">1D</string>
    <string name="five_day_timeframe_text">5D</string>
    <string name="one_month_timeframe_text">1M</string>
    <string name="six_month_timeframe_text">6M</string>
    <string name="year_to_date_timeframe_text">YTD</string>
    <string name="one_year_timeframe_text">1Y</string>
</resources>