<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".ui.ticker.TickerFragment">

    <TextView
        android:id="@+id/company_name_textview"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Company Name" />

    <TextView
        android:id="@+id/current_price_textview"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name_textview"
        tools:text="$Price" />

    <TextView
        android:id="@+id/day_change_textview"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toRightOf="@id/current_price_textview"
        app:layout_constraintTop_toBottomOf="@id/company_name_textview"
        tools:text="+/-Day Change" />

    <TextView
        android:id="@+id/percentage_change_textview"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toRightOf="@id/day_change_textview"
        app:layout_constraintTop_toBottomOf="@id/company_name_textview"
        tools:text="(Percentage%)" />

    <TextView
        android:id="@+id/current_timestamp_textview"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_price_textview"
        tools:text="Price Timestamp" />
    
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/timeframe_toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_timestamp_textview"
        app:singleSelection="true">
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_day_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/one_day_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_day_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/five_day_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_month_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/one_month_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_month_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/six_month_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/year_to_date_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/year_to_date_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/year_timeframe"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="wrap_content"
            android:text="@string/one_year_timeframe_text"
            android:textSize="@dimen/material_button_text_size"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/timeframe_toggle_group"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>