<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ezequielc.zekestockmarketnews.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ezequielc.zekestockmarketnews.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.ezequielc.zekestockmarketnews.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_navigation_bookmarks_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.ezequielc.zekestockmarketnews.ui.detail.DetailFragment"
        android:label=""
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="news_article"
            app:argType="com.ezequielc.zekestockmarketnews.data.NewsArticle" />
        <action
            android:id="@+id/action_detailFragment_to_tickerFragment"
            app:destination="@id/tickerFragment" />
    </fragment>

    <dialog
        android:id="@+id/clearBookmarksDialogFragment"
        android:name="com.ezequielc.zekestockmarketnews.ui.dialog.ClearBookmarksDialogFragment" />
    <action
        android:id="@+id/action_global_ClearBookmarksDialogFragment"
        app:destination="@id/clearBookmarksDialogFragment" />
    <fragment
        android:id="@+id/tickerFragment"
        android:name="com.ezequielc.zekestockmarketnews.ui.ticker.TickerFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_ticker" >
        <argument
            android:name="ticker"
            app:argType="com.ezequielc.zekestockmarketnews.data.Ticker" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
</navigation>